# openapi-rs

./: .gitignore  Cargo.toml  README-ZH.md  README.md
.github/workflows/: ci.yml
examples/: api.yaml  observability_test.rs  openapi_31_features.rs  openapi_31_json_schema_dialect.yaml  openapi_31_webhooks.yaml  openapi_32_complete.yaml  openapi_32_features.rs  openapi_32_query_method.yaml  openapi_32_querystring_parameter.yaml
examples/actix-web/: Cargo.toml  api.yaml
examples/actix-web/src/: main.rs
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
src/: lib.rs
src/model/: mod.rs  parse.rs  prase.rs
src/observability/: mod.rs
src/request/: actix_web.rs  axum.rs  mod.rs  validator.rs  validator_test.rs
src/validator/: enum_test.rs  mod.rs  pattern_test.rs  validator_test.rs
tests/: tests.rs
tests/example/: example.yaml
