[package]
description = "A powerful openapi library for Rust"
name = "openapi-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/baerwang/openapi-rs"
publish = false

[features]
default = []
axum = ["dep:axum"]
actix-web = ["dep:actix-web"]
test-with-axum = ["axum"]

[[example]]
name = "observability_test"
required-features = ["axum"]

# OpenAPI 3.1 and 3.2 feature examples
[[example]]
name = "openapi_31_features"

[[example]]
name = "openapi_32_features"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
url = "2"
serde_json = "1.0.140"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
validator = "0.19"
base64 = "0.21"
regex = "1.0"
log = "0.4"
env_logger = "0.10"
fern = "0.6"
futures-util = "0.3"
axum = { version = "0.7", optional = true }
actix-web = { version = "4", optional = true }
