[package]
name = "actix-web-example"
version = "0.1.0"
edition = "2021"

[dependencies]
openapi-rs = { path = "../..", features = ["actix-web"] }
actix-web = "4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.7"
futures-util = "0.3"
bytes = "1.0"
chrono = "0.4"
rand = "0.8"
env_logger = "0.10"
