[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"

[dependencies]
openapi-rs = { path = "../..", features = ["axum"] }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
